Fixed various things

--- a/start.html
+++ b/start.html
@@ -36,7 +36,7 @@
         <p><a href="load-data.php?set=0">Neue Filme entdecken &raquo;</a></p>
         <p><a href="load-data.php?set=1">Gelesene Filme betrachten &raquo;</a></p>
       <footer>
-        <p>&copy;*Author*</p>
+        <p>&copy;heubergen</p>
       </footer>
   </body>
 </html>
